Fixes (hopefully) build failure. Mea culpa.
I specified an incorrect RVM version. Also, let's drop Java 7 since Jetty 9 no longer even supports it.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,5 @@
 language: ruby
-matrix:
-  include:
-    - rvm: jruby-9.1.2
-      jdk: oraclejdk7
-    - rvm: jruby-9.1.2
-      jdk: oraclejdk8
+rvm: jruby-9.1.2.0
+jdk: oraclejdk8
 cache:
   bundler: true
